@@ -47,3 +47,9 @@
       } END_FOREACH_PRIME
   that (1) handles any low / high, and (2) segments.  Take segment_primes
   from XS.xs to do this.
+
+- Try in lehmer.c's phi function: Use two linear arrays to replace the
+  heap+array.  If we add val in one and sval in the other, they can remain
+  sorted, then reading the next combined value is easy.
+
+- Implement S2 calculation for LMO prime count.
